# url-shortener

./: .env.example  .env.prod.example  .gitignore  README.md  biome.json  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 83ccd240eb1c_initial_tables.py
backend/app/: main.py
backend/app/api/v1/endpoints/: redirect.py  shorten.py
backend/app/core/: config.py  database.py
backend/app/models/: url.py
backend/app/schemas/: url.py
backend/app/services/: alias_validator.py  shortener.py  url_validator.py
backend/tests/: conftest.py  test_api.py  test_services.py
deploy/: README.md  docker-deploy.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/actions/: shorten.ts
frontend/src/components/common/: SubmitButton.styled.ts  SubmitButton.test.tsx  SubmitButton.tsx
frontend/src/components/features/shorten/: ResultCard.styled.ts  ResultCard.test.tsx  ResultCard.tsx  ShortenForm.styled.ts  ShortenForm.test.tsx  ShortenForm.tsx
frontend/src/components/layout/: Layout.styled.ts  Layout.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/types/: url.ts
