[project]
name = "url-shortener"
version = "0.1.0"
description = "URL Shortener API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "shortuuid>=1.0.13",
    "secure>=1.0.1,<2.0.0",
    "validators>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
